--- a/app/SINE/app/src/main/assets/grafico/charts.html
+++ b/app/SINE/app/src/main/assets/grafico/charts.html
@@ -16,6 +16,7 @@
 	</head>
 
 	<body>
+		<h4> Graficos 2 </h4>
 		<canvas id="chart" width="400" height="400"></canvas>
 	</body>
 	<script src="main.js"></script>
