Plotando grafico da função desejada

--- a/app/SINE/app/src/main/assets/grafico/charts.html
+++ b/app/SINE/app/src/main/assets/grafico/charts.html
@@ -12,11 +12,12 @@
 				width: 100%;
 				max-width: 500px;
 			}
+			h4{text-align:center;}
 		</style>
 	</head>
 
 	<body>
-		<h4> Graficos 2 </h4>
+		<h4> </h4>
 		<canvas id="chart" width="400" height="400"></canvas>
 	</body>
 	<script src="main.js"></script>
